--- a/image/discourse/Dockerfile
+++ b/image/discourse/Dockerfile
@@ -6,9 +6,9 @@ MAINTAINER Sam Saffron "https://twitter.com/samsaffron"
 # Discourse specific bits
 RUN useradd discourse -s /bin/bash -m -U &&\
     mkdir -p /var/www && cd /var/www &&\
-     git clone https://github.com/discourse/discourse.git &&\
+     git clone https://github.com/metalivedev/discourse.git &&\
      cd discourse &&\
-      git remote set-branches --add origin tests-passed &&\
+      git remote set-branches --add origin notislocal &&\
     chown -R discourse:discourse /var/www/discourse &&\
     cd /var/www/discourse &&\
      sudo -u discourse bundle install --deployment \
